WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100604
[Chromium] Find-in-page reports matches in hidden iframes
https://bugs.webkit.org/show_bug.cgi?id=100604
Summary
[Chromium] Find-in-page reports matches in hidden iframes
Adam Barth
Reported
2012-10-27 22:54:15 PDT
[Chromium] Find-in-page reports matches in hidden iframes
Attachments
Patch
(4.63 KB, patch)
2012-10-27 22:55 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-10-27 22:55:39 PDT
Created
attachment 171124
[details]
Patch
Adam Barth
Comment 2
2012-10-27 22:56:40 PDT
This patch fixes <
http://code.google.com/p/chromium/issues/detail?id=156919
>, which is a P1 release blocker for M23.
Eric Seidel (no email)
Comment 3
2012-10-27 23:04:12 PDT
Comment on
attachment 171124
[details]
Patch OK. LGTM.
WebKit Review Bot
Comment 4
2012-10-27 23:11:04 PDT
Comment on
attachment 171124
[details]
Patch Rejecting
attachment 171124
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14615683
Adam Barth
Comment 5
2012-10-27 23:27:56 PDT
Comment on
attachment 171124
[details]
Patch Clearing flags on attachment: 171124 Committed
r132746
: <
http://trac.webkit.org/changeset/132746
>
Adam Barth
Comment 6
2012-10-27 23:27:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug