[Chromium] Find-in-page reports matches in hidden iframes https://bugs.webkit.org/show_bug.cgi?id=100604

Reviewed by Eric Seidel.

This is actually a regression caused by
http://trac.webkit.org/changeset/128784. This patch adds back some code
removed in WebFrameImpl::shouldScopeMatches in r128784.

This patch also introduces a test so that we don't make this mistake
again.

* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::shouldScopeMatches):
* tests/WebFrameTest.cpp:
* tests/data/find_in_hidden_frame.html: Added.


Canonical link: https://commits.webkit.org/118649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132746 268f45cc-cd09-0410-ab3c-d52691b4dbfc